<resources>
    <string name="app_name">环宇通讯</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="newUserLoding">新用户注册</string>
    <string name="userLoding">登录</string>
    <string name="ensure">确 定</string>
    <string name="cancel">取 消</string>
    <string name="confirm_install_hint">"安装提示"</string>
    <string name="confirm_install">"为保证您的交易安全，需要您安装支付宝安全支付服务，才能进行付款。\n\n点击确定，立即安装。"</string>
    <string name="settingcontent1_recharge_command_btn1">确定充值</string>
    <string name="settingcontent1_recharge_command_btn2">返回</string>
    <string name="hone">手机号码</string>
    <string name="hone_d">手机号</string>
    <string name="password">输入密码</string>
    <string name="password_d">密码</string>
    <string name="inputphone">请输入手机号码</string>
    <string name="inputpassword">请输入密码</string>
    <string name="agenpassword">确认密码</string>
    <string name="agensurepassword">请确认密码</string>
    <string name="surechangepassword">确认,修改密码</string>
    <string name="setts_me">我</string>
    <string name="setts_logon_account">当前登录帐号</string>
    <string name="setts_account_text">帐号设置</string>
    <string name="setts_recharge_text">账户充值</string>
    <string name="setts_wallet_text">我的钱包</string>
    <string name="setts_inviteriends_text">邀请好友</string>
    <string name="setts_aboutaisin_text">关于环宇</string>
    <string name="setaccount_bar_text">帐号设置</string>
    <string name="setts_switch_on_text">切换登录</string>
    <string name="setts_selfpd_titletext">个人资料</string>
    <string name="setts_change_number_text">更改号码</string>
    <string name="setts_retrieve_password_text">找回密码</string>
    <string name="setts_change_password_text">修改密码</string>
    <string name="setts_sign_out_text">退出登录</string>
    <string name="setts_recharge_yd_text">移动充值卡</string>
    <string name="setts_recharge_lt_text">联通充值卡</string>
    <string name="setts_recharge_dx_text">电信充值卡</string>
    <string name="setts_recharge_as_text">环宇充值卡</string>
    <string name="setts_recharge_zfb_text">支付宝充值</string>
    <string name="setts_account_balance_text">账户余额查询</string>
    <string name="setts_account_water_text">账户流水</string>
    <string name="setts_single_query_text">话单查询</string>
    <string name="setts_inviteriends_gg_text">分享环宇，邀请更多好友一起使用环宇！\n好友下载注册后，您可立刻获得40分钟邀请奖励红包</string>
    <string name="circle_friends_text">朋友圈</string>
    <string name="wechat_friends_text">微信好友</string>
    <string name="qq">QQ</string>
    <string name="sina_weibo">新浪微博</string>
    <string name="qq_zone">QQ空间</string>
    <string name="short_message">短信</string>
    <string name="setts_shared_addred">操作成功</string>
    <string name="settsaboutaisin_text">关于环宇</string>
    <string name="setts_zfsm_text">资费说明</string>
    <string name="setts_czsm">充值说明</string>
    <string name="setts_bzzx_text">帮助中心</string>
    <string name="setts_kfrx_text">客服热线</string>
    <string name="setts_xbbtx_text">新版本特性</string>
    <string name="setts_jcxbb">检查新版本</string>
    <string name="setts_kfsj">服务时间 8:30-22:30</string>
    <string name="setts_shared_addred_successed">好友注册环宇成功登录后,您将获得\n邀请奖励红包</string>
    <string name="qd">确定</string>
    <string name="cnumber_account_text">更改号码</string>
    <string name="cnumber_account_oldphone_text">原手机号码</string>
    <string name="cnumber_account_newphone_text">新手机号码</string>
    <string name="cnumber_account_newphone_input">请输入新手机号码</string>
    <string name="cnumber_account_newphone_text_agen">重复新号码</string>
    <string name="cnumber_account_newphone_input_agen">重复输入新手机号</string>
    <string name="old_phone_password_text">原设的密码</string>
    <string name="old_pp_account_c_passowrd_input_text">请输入原设密码</string>
    <string name="qdgbzh">确定,改绑帐号</string>
    <string name="cp_old">旧密码</string>
    <string name="cp_old_input">请输入旧密码</string>
    <string name="cp_new">新密码</string>
    <string name="cp_new_input">请输入新密码</string>
    <string name="chongzhikaedu">充值卡面额:</string>
    <string name="czkxlh">充值卡卡号:</string>
    <string name="czkmm">充值卡密码:</string>
    <string name="qdchongzhi">确定充值</string>
    <string name="card_recharge_text">无论您的手机卡是移动、联通还是电信号，都可购买任意一款充值卡充值</string>
    <string name="qsryzm">请输入验证码</string>
    <string name="changepassword_yzm">验证码</string>
    <string name="hqyzm">获取验证码</string>
    <string name="changepassword_yzm_input">请输入验证码</string>
    <string name="cacc_yzm">收到验证码</string>
    <string name="acqr_zhye">账户余额</string>
    <string name="query_phone">手机号码</string>
    <string name="query_yu_e">可用余额</string>
    <string name="query_yxq">有效期至</string>
    <string name="query_tcmc">套餐名称</string>
    <string name="query_bydq">包月到期</string>
    <string name="query_ljcz">立即充值</string>
    <string name="aboutaisin_zfsm1_t">一、资费说明：</string>
    <string name="aboutaisin_zfsm1">无月租费、无长途费，国内长途与市话等同。</string>
    <string name="aboutaisin_zfsm2_t">二、信号拨打：</string>
    <string name="aboutaisin_zfsm2_1">发起呼叫大约产生0.1K的流量，通话过程中没有任何网络流量。国内具体资费为</string>
    <string name="aboutaisin_zfsm2_2">元/分钟，充值赠送折后更低。</string>
    <string name="aboutaisin_zfsm3_t">三、国际直拨：</string>
    <string name="aboutaisin_zfsm3">发起直拨呼叫需要使用流量或WIFI，建议在网络状态好的情况下使用。国际业务请使用WIFI国际直拨，在拨打方式中打开国际直拨开关。</string>
    <string name="aboutaisin_zfsm4_t">四、计费方式：</string>
    <string name="aboutaisin_zfsm4">拨打电话从对方接通开始计费，不接通不计费</string>
    <string name="aboutaisin_zfsm5_t">五、流量：</string>
    <string name="aboutaisin_zfsm5">使用过程中需向手机运营商支付少量的GPRS上网费，为节省费用，建议您开通GPRS包月套餐，详情请咨询手机运营商。</string>
    <string name="aboutaisin_czsm1_t">一、充值赠送：</string>
    <string name="aboutaisin_czsm1">所有线上充值用户充100送100；有效期为一年，所有线上支付用户统一赠送，赠送金额可一次性打完。</string>
    <string name="aboutaisin_czsm2_t">二、充值方式：</string>
    <string name="aboutaisin_czsm2">支持的的充值卡类型为环宇通讯充值卡，您也可以选择支付宝、或扫描微信二维码联系本公司的微信客服充值。</string>
    <string name="aboutaisin_czsm3_t">三、注意事项：</string>
    <string name="aboutaisin_czsm3_1">1、支付金额必须与充值卡面值的实际金额一致，否则将导致不成功或余额丢失。充值提交成功后，请等待3—5分钟再查询账户余额。</string>
    <string name="aboutaisin_czsm3_2">2、环宇通讯充值卡不享受话费赠送规则。</string>
    <string name="aboutaisin_czsm4_t">四、包月介绍：</string>
    <string name="aboutaisin_czsm4_1">包30天套餐、包90天套餐、包180天套餐、包365天套餐。详情请联系客服。</string>
    <string name="aboutaisin_czsm4_2">1、本套餐只包拨打国内所有电话，不包括国际长途电话的费用。</string>
    <string name="aboutaisin_czsm4_3">2、充值本包月套餐可选择网上支付、淘宝店铺或者与全国各代理商联系，购买专门的环宇包月卡进行充值。</string>
    <string name="aboutaisin_bzzx1_t">一、无额外费用：</string>
    <string name="aboutaisin_bzzx1">使用本软件来拨打的电话，从软件的账户里扣除，不会收取手机本身的话费，请放心使用。</string>
    <string name="aboutaisin_bzzx2_t">二、账户统一：</string>
    <string name="aboutaisin_bzzx2">无VIP、无积分、无会员资格、无话费有效期，不区分基本账户和赠送账户，账户上的余额可一次性全部消费完，不用担心赠送金用不完。</string>
    <string name="aboutaisin_bzzx3_t">三、去电显示：</string>
    <string name="aboutaisin_bzzx3">充值前跟充值后效果完全一样、所有时段都一样、去电对方显示真实号码，并且此功能免费。</string>
    <string name="aboutaisin_bzzx4_t">四、拨打电话：</string>
    <string name="aboutaisin_bzzx4">拨打电话：固定电话号码前请加拨区号，国际电话请加拨国家代码。</string>
    <string name="aboutaisin_bzzx5_t">五、注册绑定：</string>
    <string name="aboutaisin_bzzx5">不会收取您任何费用，请放心使用；更换手机或重装软件后需再次注册绑定，首次使用立即赠送4元体验</string>
    <string name="aboutaisin_bzzx6_t">六、更改号码：</string>
    <string name="aboutaisin_bzzx6">您更换了手机号码，需要输入新号码以获取验证码，按下“更改号码”按钮后，便可将原号码上的余额转移到新号码上来使用。</string>
    <string name="alipay_text">将免费获取手机支付插件，该插件是由支付宝公司提供，请放心使用！</string>
    <string name="alipay_money">请选择充值金额</string>
    <string name="aboutaisin_bzzx7_t">七、环宇免流量回拨：</string>
    <string name="aboutaisin_bzzx7_1">1、当用户手机处于无网络状态下，可选择使用“尝试环宇免流量回拨”进行拨打；</string>
    <string name="aboutaisin_bzzx7_2">2、"环宇免流量回拨"是基于运营商IP电话技术的回拨拨打方式，能实现用户手机在无数据网络情况下使用环宇拨打电话，真正实现“无流量拨打”;</string>
    <string name="aboutaisin_bzzx7_3">3、"环宇免流量回拨"进行拨打时，您的手机将拨打一个96起始的号码，呼出后将自动挂断；过几秒钟将有一个电话回拨到您的手机，请放心接听。</string>
    <string name="aboutaisin_bzzx7_4">4、选择使用“环宇免流量回拨”无需额外收费，回拨电话接通对方后才开始计费，具体资费标准与拨打环宇回拨电话一致；</string>
    <string name="aboutaisin_bzzx7_5">5、目前“环宇免流量回拨”功能只支持广东移动/联通用户、国内其它部分地区移动用户使用。如果您的手机拨打一个96起始的号码，自动挂断后，几秒钟内没有回拨电话到您的手机，表示您的手机号码不支持"环宇免流量回拨"方式，请使用其它拨打方式。</string>
    <string name="alipay_type">请选择充值方式</string>
    <string name="alipay_type1">直  充</string>
    <string name="alipay_type2">包  月</string>
    <string name="alipay_button_text">确定在线充值</string>
    <string name="alipay_mon1">充50元到账200元</string>
    <string name="alipay_mon2">充100元到账500元</string>
    <string name="alipay_mon3">充200元到账1000元</string>
    <string name="alipay_mon4">充500元到账2500元</string>
    <string name="alipay_mon5">90元包3个月套餐</string>
    <string name="alipay_mon6">180元包6个月套餐</string>
    <string name="alipay_mon7">365元包12个月套餐</string>
    <string name="alipay_mon8">充1元</string>
    <string name="alipay_zfbcz">支付宝充值</string>
    <string name="call_records_fragment_titlename">通话记录</string>
    <string name="call_details_thxq">通话详情</string>
    <string name="mail_listactivity_titlename">通讯录</string>
    <string name="mail_listactivity_sslxr">搜索联系人</string>
    <string name="detailed_information_activity_titlename">详细资料</string>
    <string name="num_J">+</string>
    <string name="num_0">0</string>
    <string name="num_x">*</string>
    <string name="num_wxyz">WXYZ</string>
    <string name="num_9">9</string>
    <string name="num_tuy">TUV</string>
    <string name="num_8">8</string>
    <string name="num_pqrs">PQRS</string>
    <string name="num_7">7</string>
    <string name="num_mno">MNO</string>
    <string name="num_6">6</string>
    <string name="num_jkl">JKL</string>
    <string name="num_5">5</string>
    <string name="num_ghi">GHI</string>
    <string name="num_4">4</string>
    <string name="num_def">DEF</string>
    <string name="num_3">3</string>
    <string name="num_abc">ABC</string>
    <string name="num_2">2</string>
    <string name="num_1">1</string>
    <string name="srxmhhm">输入姓名或号码</string>
    <string name="dial_dialtitlename">拨号</string>
    <string name="wjmm">忘记密码?</string>
    <string name="set_callout_name">拨打设置</string>
    <string name="setts_Keyback_text">键盘背景</string>
    <string name="autoanswall_text">默认开启回拨自动接听</string>
    <string name="autoanswallk_text">回拨自动接听开关</string>
    <string name="loading">加载中...</string>
    <string name="calling">正在呼叫...</string>
    <string name="aisincallbacktoyouphone">环宇正在回拨到您的手机</string>
    <string name="pleaseanswallcallback">请注意接听稍后的来电</string>
    <string name="findtitlename">发现</string>
    <string name="registrationyzm_text">验证码</string>
    <string name="regist_getyzmtext">获取验证码</string>
    <string name="aisin_text">环宇</string>
    <string name="geivered">给您发来一个红包</string>
    <string name="reddllclose">关闭</string>
    <string name="myred_titlename">我的红包</string>
    <string name="myred">我的红包</string>
    <string name="red_allget">共收到</string>
    <string name="rednums">红包个数</string>
    <string name="menuitem_myred">收到的红包</string>
    <string name="menured_notrext">未拆红包</string>
    <string name="sendoutred">发出的红包</string>
    <string name="aisinreds">环宇红包</string>
    <string name="regist4v2_titlname">注册</string>
    <string name="cn_86">中国 +86</string>
    <string name="regshowmesage">点击注册默认同意环宇的</string>
    <string name="usertps">《用户协议》</string>
    <string name="cannotrecievecode">收不到验证码？</string>
    <string name="inputregcode">填写验证码</string>
    <string name="not_changepwd">不了,暂时不修改密码</string>
    <string name="athree">30</string>
    <string name="havemoneyFeedback">有奖反馈</string>
    <string name="havemoneyFeedback_hint">请提出您的宝贵意见或建议,环宇的成长离不开您的支持,我们将抽取一些用户给予奖励!</string>
    <string name="tijiao">" 提交 "</string>
    <string name="fbtitle">点击选择问题类型</string>
    <string name="inputtitle">请输入标题</string>
    <string name="nr">内容:</string>
</resources>