<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cnumber_account_linlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0EFF5"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FFFFFF" >

        <ImageView
            android:id="@+id/setts_cnumber_account_back"
            android:layout_width="76dp"
            android:layout_height="46dp"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/cnumber_account_text"
            android:textColor="#000000"
            android:textSize="20sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="49.5dp"
            android:background="#BDBEBD" >
        </View>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/resbindingback"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/cnumber_account_oldphone_text"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/cnumber_account_oldphone_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical|left"
                android:textColor="#000000"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="#e8e8e8" >
        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/cnumber_account_newphone_text"
                android:textColor="#000000"
                android:textSize="15sp" />

            <org.aisin.sipphone.LineEditText
                android:id="@+id/cnumber_account_newphone_num"
                style="?android:attr/textViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:hint="@string/cnumber_account_newphone_input"
                android:inputType="phone"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="#e8e8e8" >
        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/cnumber_account_newphone_text_agen"
                android:textColor="#000000"
                android:textSize="15sp" />

            <org.aisin.sipphone.LineEditText
                android:id="@+id/cnumber_account_newphone_num_agen"
                style="?android:attr/textViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:hint="@string/cnumber_account_newphone_input_agen"
                android:inputType="phone"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="#e8e8e8" >
        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/old_phone_password_text"
                android:textColor="#000000"
                android:textSize="15sp" />

            <org.aisin.sipphone.LineEditText
                android:id="@+id/old_pp_account_c_passowrd"
                style="?android:attr/textViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:hint="@string/old_pp_account_c_passowrd_input_text"
                android:inputType="textPassword"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/cnumber_account_changebut"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/bt_reg_drawable"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/qdgbzh"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

</LinearLayout>