<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/setretrievepassword_linlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0EFF5"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FFFFFF" >

        <ImageView
            android:id="@+id/setts_retrievepassword_account_back"
            android:layout_width="76dp"
            android:layout_height="46dp"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/setts_retrieve_password_text"
            android:textColor="#000000"
            android:textSize="20sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="49.5dp"
            android:background="#BDBEBD" >
        </View>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/resbindingback"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/hone"
                android:textColor="#000000"
                android:textSize="18sp" />

            <org.aisin.sipphone.LineEditText
                android:id="@+id/setts_rpassword_account_phone"
                style="?android:attr/textViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:hint="@string/inputphone"
                android:inputType="phone"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="#BDBEBD" >
        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/changepassword_yzm"
                android:textColor="#000000"
                android:textSize="18sp" />

            <org.aisin.sipphone.LineEditText
                android:id="@+id/getpassword_yzm"
                style="?android:attr/textViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:hint="@string/changepassword_yzm_input"
                android:inputType="number"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/setts_rpassword_account_bt_yzm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/btdrawable"
            android:gravity="center"
            android:text="@string/hqyzm"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/setts_rpassword_account_bt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:background="@drawable/btdrawable"
            android:gravity="center"
            android:text="@string/qd"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>