<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/switch_onactivity_linlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0EFF5"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FFFFFF" >

        <ImageView
            android:id="@+id/setts_switch_on_back"
            android:layout_width="76dp"
            android:layout_height="46dp"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/setts_switch_on_text"
            android:textColor="#000000"
            android:textSize="20sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="49.5dp"
            android:background="#BDBEBD" >
        </View>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/resbindingback"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/hone"
                android:textColor="#000000"
                android:textSize="18sp" />

            <org.aisin.sipphone.LineEditText
                android:id="@+id/switch_on_phone"
                style="?android:attr/textViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:hint="@string/inputphone"
                android:inputType="phone"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="#BDBEBD" >
        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/password"
                android:textColor="#000000"
                android:textSize="18sp" />

            <org.aisin.sipphone.LineEditText
                android:id="@+id/switch_on_passowrd"
                style="?android:attr/textViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:hint="@string/inputpassword"
                android:inputType="textPassword"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/switch_on_textview_z"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/btdrawable"
        android:gravity="center"
        android:text="@string/qd"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

</LinearLayout>