<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/removelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0EFF5"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FFFFFF" >

        <ImageView
            android:id="@+id/setts_selfpd_cqianming_back"
            android:layout_width="76dp"
            android:layout_height="46dp"
            android:layout_gravity="center_vertical"
            android:onClick="viewonclick"
            android:padding="8dp"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/havemoneyFeedback"
            android:textColor="#000000"
            android:textSize="20sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="49.5dp"
            android:background="#BDBEBD" >
        </View>
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="12dp"
        android:text="@string/fbtitle"
        android:textColor="#000000"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/titleinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/spdchangenamebanck"
        android:ellipsize="end"
        android:hint="@string/inputtitle"
        android:singleLine="true"
        android:textColor="#000000"
        android:textSize="12sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="12dp"
                android:text="@string/nr"
                android:textColor="#000000"
                android:textSize="12sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/spdchangenamebanck" >

                <EditText
                    android:id="@+id/spd_cn_inputqianming"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="top"
                    android:hint="@string/havemoneyFeedback_hint"
                    android:lines="5"
                    android:maxLength="100"
                    android:textColor="#000000"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tjsum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/spd_cn_inputqianming"
                    android:layout_alignParentRight="true"
                    android:text="@string/athree"
                    android:textColor="#7cfc00"
                    android:textSize="12sp"
                    android:visibility="invisible" />
            </RelativeLayout>

            <TextView
                android:id="@+id/sendfeedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bt_reg_drawable"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/tijiao"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />
        </LinearLayout>

        <ListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/spinnerbanck"
            android:divider="#e8e8e8"
            android:dividerHeight="0.5dp"
            android:listSelector="#00000000" >
        </ListView>
    </FrameLayout>

</LinearLayout>